2010-12-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpVersion.cmake: bump to version 2.3.3

2010-12-07  Marco Randazzo <marco.randazzo@iit.it>

    * src/modules/laserHokuyo.cpp: fixed configuration parameters
	
2010-12-07  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/kinect/CMakeLists.txt: add Philipp Robbel's
	wrapper around libfreenect for kinect [thanks Philipp Robbel]

2010-12-01  Marco Randazzo <marco.randazzo@iit.it>

    * src/modules/laserHokuyo.cpp: fixed const strings under linux

2010-11-29  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpVersion.cmake: bump version to 2.3.2

2010-11-26  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_dev/src/ServerControlBoard.cpp: when YARP_QUIET
	is set, suppress driver chatter [thanks Gianluca Massera]

2010-11-25  Ugo Pattacini <ugo.pattacini@iit.it>

	* GazeControl.h and CartesianControl.h: added methods to save/restore
        the controller status

2010-11-25  Arjan Gijsberts  <arjan@liralab.it>

	* conf/FindAtlas.cmake: additional possibly include directory
	and library locations for Atlas, warranted by changes in the 
	Ubuntu packages.

2010-11-24  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* src/libYARP_OS/src/Companion.cpp: unregister port names
	if process is interrupted (for "yarp read", "yarp write", and
	"yarp readwrite")

2010-11-23  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* conf/YarpOptions.cmake: support reasonable RPATH behavior
	upon installation in non-system directories 
	[thanks Lorenzo Natale] [thanks Lars Schillingmann]

	* example/swig/yarp.i: add mono image support to the wrappers
	[thanks Arnaud Degroote]

	* example/swig/yarp.i: add chararray interface to help speed
	up image acess in Java [thanks Leo Pape]


2010-11-22  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* example/swig/yarp.i: add an efficient Image::setExternal
	method for Python 3.x [thanks Arnaud Degroote]

2010-11-22  Ugo Pattacini <ugo.pattacini@iit.it>
