@@ -1,3 +1,11 @@
+2010-12-28  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
+
+	* src/libYARP_OS/src/BottleImpl.cpp: fix hexadecimal
+	parsing bug [thanks Alessandro Scalzo]
+
+	* src/libYARP_OS/harness/BottleTest.cpp: test hexadecimal
+	parsing bug [thanks Alessandro Scalzo]
+
 2010-12-17  Paul Fitzpatrick  <paulfitz@alum.mit.edu>
 
 	* conf/YarpVersion.cmake: bump to version 2.3.3
